third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-msrv/transmute-mut-src-not-frombytes.stderr
error[E0277]: the trait bound `Src: FromBytes` is not satisfied
  --> tests/ui-msrv/transmute-mut-src-not-frombytes.rs:24:38
   |
24 | const SRC_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `Src`
   |
note: required by `AssertSrcIsFromBytes`
  --> tests/ui-msrv/transmute-mut-src-not-frombytes.rs:24:38
   |
24 | const SRC_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: FromBytes` is not satisfied
  --> tests/ui-msrv/transmute-mut-src-not-frombytes.rs:24:38
   |
24 | const SRC_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `Src`
   |
note: required by a bound in `AssertSrcIsFromBytes`
  --> tests/ui-msrv/transmute-mut-src-not-frombytes.rs:24:38
   |
24 | const SRC_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsFromBytes`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
